--- a/docs/.vuepress/theme/styles/index.css
+++ b/docs/.vuepress/theme/styles/index.css
@@ -21,44 +21,12 @@
    * 背景色
    * -------------------------------------------------------------------------- */
 
-  --vp-c-bg: rgba(255, 255, 255, 1);                  /* 主体背景 */
+  --vp-c-bg: #fff;                                    /* 主体背景 */
   --vp-nav-bg-color: #fff;                            /* 导航栏背景 */
   --vp-nav-screen-bg-color: #fff;                     /* 移动端导航栏 */
   --vp-local-nav-bg-color: #fff;                      /* 页面内导航栏 */
   --vp-sidebar-bg-color: #f6f6f7;                     /* 侧边栏背景 */
   --vp-code-block-bg: #f6f8fa;                        /* 代码块背景 */
-}
-
-/**
- * Typography
- * -------------------------------------------------------------------------- */
- :root {
-  --vp-font-family-base:
-    "Chinese Quotes",
-    inter,
-    ui-sans-serif,
-    system-ui,
-    sans-serif,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol",
-    "Noto Color Emoji",
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol",
-    "Noto Color Emoji";
-  --vp-font-family-mono:
-    "JetBrains Mono",
-    ui-monospace,
-    sfmono-regular,
-    menlo,
-    monaco,
-    consolas,
-    "Liberation Mono",
-    "Courier New",
-    monospace;
-
-  font-optical-sizing: auto;
 }
 
 [data-theme="dark"] {
@@ -84,10 +52,45 @@
    * 背景色
    * -------------------------------------------------------------------------- */
 
-  --vp-c-bg: rgba(27, 27, 31, 1);                     /* 主体背景 */
-  --vp-nav-bg-color: rgba(27, 27, 31, 1);             /* 导航栏背景 */
+  --vp-c-bg: #1b1b1f;                                 /* 主体背景 */
+  --vp-nav-bg-color: #1b1b1f;                         /* 导航栏背景 */
   --vp-nav-screen-bg-color: #1b1b1f;                  /* 移动端导航栏 */
   --vp-local-nav-bg-color: #1b1b1f;                   /* 页面内导航栏 */
   --vp-sidebar-bg-color: #161618;                     /* 侧边栏背景 */
   --vp-code-block-bg: #202127;                        /* 代码块背景 */
+}
+
+
+
+/**
+ * Typography
+ * -------------------------------------------------------------------------- */
+ :root {
+  --vp-font-family-base:
+    "Maple Mono NF CN",
+    "Chinese Quotes",
+    inter,
+    ui-sans-serif,
+    system-ui,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji",
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
+  --vp-font-family-mono:
+    "JetBrains Mono",
+    ui-monospace,
+    sfmono-regular,
+    menlo,
+    monaco,
+    consolas,
+    "Liberation Mono",
+    "Courier New",
+    monospace;
+
+  font-optical-sizing: auto;
 }
