--- a/docs/.vuepress/theme/styles/custom.css
+++ b/docs/.vuepress/theme/styles/custom.css
@@ -1,3 +1,13 @@
+.vp-doc-container {
+  --vp-doc-blog-bg: rgba(251, 141, 111, 0.314);
+
+  background-image:
+    linear-gradient(90deg, var(--vp-doc-blog-bg) 3%, transparent 0),
+    linear-gradient(1turn, var(--vp-doc-blog-bg) 3%, transparent 0);
+  background-position: 50%;
+  background-size: 20px 20px;
+}
+
 :root {
   /** 主题颜色 */
 
@@ -33,6 +43,10 @@
     monospace;
 
   font-optical-sizing: auto;
+}
+
+[data-theme="dark"] .vp-doc-container {
+  --vp-doc-blog-bg: rgba(251, 141, 111, 0.314);
 }
 
 /** 深色模式 */
